--- a/frontend/src/styles/_musiccard.scss
+++ b/frontend/src/styles/_musiccard.scss
@@ -4,3 +4,18 @@
   width: 200px;
   cursor: pointer;
 }
+.music-card__loading-image {
+  min-width: 200px;
+  min-height: 150px;
+  background: #d3cce3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #e9e4f0,
+    #d3cce3
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #e9e4f0,
+    #d3cce3
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
